fix: fix overflow-x

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ header,
 section {
   display: block;
 }
+
 html {
   overflow-x: hidden;
   margin-right: calc(-1 * (100vw - 100%));
@@ -1541,7 +1542,7 @@ input:focus:-ms-input-placeholder {
 }
 
 .menu-form {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 
   @media (max-width:450px) {
     margin: 30px 0;
@@ -2683,7 +2684,12 @@ input:focus:-ms-input-placeholder {
 
 .archive-wrapper {
   background: #333;
+  position: relative;
+  overflow-x: hidden;
 
+  @media (max-width:1000px) {
+    padding: 0 10px;
+  }
 }
 
 .archive-overlay {
